# v1

./: .gitignore  README.md  pyproject.toml
crumb/: constants.py  enums.py  exceptions.py  maps.py  types.py  utils.py
crumb/admin/: app.py  exceptions.py  login_view.py
crumb/admin/forms/: __init__.py  primitive.py  schema.py  widget_schema_creator.py
crumb/admin/layout/: __init__.py  btn_pin.py  header.py  loader.py  menu_group.py  menu_item.py  payload.py  popover.py  popup.py  sidebar.py  tabs_bar.py
crumb/admin/resources/: __init__.py  base.py  crud_resource.py  directories.py  documents.py
crumb/commands/: __init__.py  commands.py  createsuperuser.py  db_commands.py  run_flet_app.py
crumb/entities/accum_registers/: __init__.py  model.py  repository.py
crumb/entities/directories/: __init__.py  model.py  repository.py
crumb/entities/documents/: __init__.py  model.py  repository.py
crumb/entities/info_registers/: __init__.py  model.py  repository.py
crumb/entities/registers/: __init__.py  model.py  repository.py
crumb/filters/: __init__.py  base.py  datetime.py  enum.py  int.py  str.py
crumb/orm/: __init__.py  base_model.py  connection.py
crumb/orm/fields/: __init__.py  boolean_field.py  char_enum_field.py  char_field.py  date_field.py  datetime_field.py  float_field.py  int_enum_field.py  int_field.py  (+2 more)
crumb/repository/: __init__.py  base.py  register.py  repository.py  values_list_repository.py
crumb/translations/: app_translation.py  entity.py  interface.py
crumb/users/: model.py  repository.py  resource.py  translations.py
(+57 files in other folders)
