[tool.poetry]
name = "crumb"
version = "1.0"
description = "Крошечная система для больших задач"
authors = ["alta7700 <alta7700@mail.ru>"]
readme = "README.md"
packages = [{ include = "crumb" }]

[tool.poetry.dependencies]
python = "3.11.4"
flet = "0.9.0"
tortoise-orm = "0.20.0"
asyncpg = "0.28.0"
aerich = "0.7.2"
passlib = "1.7.4"
cryptography = "41.0.3"
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
